# zorph-crypto

./: .gitignore  AUDIT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.claude/: settings.local.json
benches/: benchmark.rs
examples/: derive_key.rs  encrypt_file.rs  envelope.rs  hybrid_sign.rs  recovery.rs  streaming.rs
src/: attest.rs  encrypt.rs  exchange.rs  hash.rs  keys.rs  lib.rs  multisig.rs  pqc.rs  sharing.rs  sign.rs  token.rs  wipe.rs  zk.rs
tests/: attest_test.rs  encrypt_test.rs  exchange_test.rs  hash_test.rs  keys_password_test.rs  keys_test.rs  multisig_test.rs  pqc_test.rs  sharing_test.rs  sign_test.rs  token_test.rs  wipe_test.rs  zk_test.rs
